examples/test/testpolicy8067.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8067
  namespace: namespace147
spec:
  podSelector:
    matchLabels:
      key12: value46
      key32: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value4
          key48: value20
      podSelector:
        matchLabels:
          key47: value5
